--- a/euro/templates/euro/questionderives.html
+++ b/euro/templates/euro/questionderives.html
@@ -32,7 +32,7 @@
 
                         {% if rencontre.passed == False%}
                         <label>
-                                <input class="entry"  {% if rencontre.allowNull = True %}disabled='disabled'{% endif %} id = 'score_{{rencontre.id}}_radio_1' type="radio" name="score_{{rencontre.id}}_radio" value="1" {% if pronostics|winner:rencontre == 1 %}checked='checked'{% endif %}/>
+                                <input class="entry vict"  {% if rencontre.allowNull = True %}disabled='disabled'{% endif %} id = 'score_{{rencontre.id}}_radio_1' type="radio" name="score_{{rencontre.id}}_radio" value="1" {% if pronostics|winner:rencontre == 1 %}checked='checked'{% endif %}/>
                                 <img src="{% static 'euro/images/victoire.png' %}" alt="Euro 2016" height="32" />
                         </label>
 
@@ -55,7 +55,7 @@
 
                         {% if rencontre.passed == False%}
                         <label>
-                                <input class="entry" {% if rencontre.allowNull = True %}disabled='disabled'{% endif %}  id = 'score_{{rencontre.id}}_radio_2' type="radio" name="score_{{rencontre.id}}_radio" value="2" {% if pronostics|winner:rencontre == 2 %}checked='checked'{% endif %}/>
+                                <input class="entry vict" {% if rencontre.allowNull = True %}disabled='disabled'{% endif %}  id = 'score_{{rencontre.id}}_radio_2' type="radio" name="score_{{rencontre.id}}_radio" value="2" {% if pronostics|winner:rencontre == 2 %}checked='checked'{% endif %}/>
                                 <img src="{% static 'euro/images/victoire.png' %}" alt="Euro 2016" height="32" />
                         </label>
                         {% else %}
